winner alignment fix

--- a/scss/table.scss
+++ b/scss/table.scss
@@ -463,6 +463,9 @@
     .name {
       transform: translate(25%) !important;
     }
+    .winner{
+      transform: translate(45%);
+    }
   }
   .player5 {
     // transform: translateY(-90%);
